// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAlignment should keep wrapped-component syling 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.125rem",
      "marginTop": "0.375rem",
      "verticalAlign": "top",
    }
  }
>
  <div
    style={
      Object {
        "float": "right",
      }
    }
  >
    test lineHeight 
    1.875rem
     and iconsSize 
    1.125rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.125rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.125rem
     and iconsSize 
    1.125rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 2`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.125rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 3`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.125rem",
      "marginTop": "0.1875rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.5rem
     and iconsSize 
    1.125rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 4`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.5rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 5`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.125rem",
      "marginTop": "0.375rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.875rem
     and iconsSize 
    1.125rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 6`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0.1875rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.875rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 7`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.125rem",
      "marginTop": "0.75rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    2.625rem
     and iconsSize 
    1.125rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 8`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0.5625rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    2.625rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 9`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.125rem",
      "marginTop": "1.125rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    3.375rem
     and iconsSize 
    1.125rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 10`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0.9375rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    3.375rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;
